; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_utils.c_string_list_parse.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_utils.c_string_list_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @string_list_parse(i8* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %36

12:                                               ; preds = %2
  store i32* null, i32** %6, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i8** @g_strsplit(i8* %13, i8* %14, i32 0)
  store i8** %15, i8*** %7, align 8
  %16 = load i8**, i8*** %7, align 8
  store i8** %16, i8*** %8, align 8
  br label %17

17:                                               ; preds = %27, %12
  %18 = load i8**, i8*** %8, align 8
  %19 = load i8*, i8** %18, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %30

21:                                               ; preds = %17
  %22 = load i32*, i32** %6, align 8
  %23 = load i8**, i8*** %8, align 8
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @g_strdup(i8* %24)
  %26 = call i32* @g_list_prepend(i32* %22, i32 %25)
  store i32* %26, i32** %6, align 8
  br label %27

27:                                               ; preds = %21
  %28 = load i8**, i8*** %8, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i32 1
  store i8** %29, i8*** %8, align 8
  br label %17

30:                                               ; preds = %17
  %31 = load i32*, i32** %6, align 8
  %32 = call i32* @g_list_reverse(i32* %31)
  store i32* %32, i32** %6, align 8
  %33 = load i8**, i8*** %7, align 8
  %34 = call i32 @g_strfreev(i8** %33)
  %35 = load i32*, i32** %6, align 8
  store i32* %35, i32** %3, align 8
  br label %36

36:                                               ; preds = %30, %11
  %37 = load i32*, i32** %3, align 8
  ret i32* %37
}

declare dso_local i8** @g_strsplit(i8*, i8*, i32) #1

declare dso_local i32* @g_list_prepend(i32*, i32) #1

declare dso_local i32 @g_strdup(i8*) #1

declare dso_local i32* @g_list_reverse(i32*) #1

declare dso_local i32 @g_strfreev(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
